# WiRay

./: CMakeLists.txt  README.md
Scenes/: pm.xml  vol.xml
Scenes/table/: cbox_path_mis.xml
include/nori/: homogeneous.h  scene.h  vector.h  warp.h
src/BSDFs/: dielectric.cpp  disney.cpp  microfacet.cpp
src/Cameras/: dof_camera.cpp
src/Core/: checkerboard.cpp  render.cpp  scene.cpp  sphere.cpp  warp.cpp  warptest.cpp
src/Lights/: arealight.cpp  envlight.cpp  envmap.cpp  pointlight.cpp
src/Volumes/: homogeneous.cpp
src/intergrators/: ao.cpp  direct_ems.cpp  direct_mats.cpp  direct_mis.cpp  normal.cpp  path.cpp  photonmapper.cpp  volpath.cpp
